--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "firebase": "^9.6.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-masonry-css": "^1.0.16",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "sass": "^1.49.7",
